- Fixed word count on align, redo, guillemet, copy from word

--- a/bibisco/app/css/bibisco.css
+++ b/bibisco/app/css/bibisco.css
@@ -614,6 +614,10 @@ h3 {
 	text-indent: 30px;
 }
 
+.bibiscoRichTextEditor-bodyClass-indent-true li{
+	list-style-position: inside;
+}
+
 .bibiscoRichTextEditorSettings-arial {
 	font-family: Helvetica, Arial, sans-serif;
 }
